Fix code smell in testing